[tool.poetry]
name = "contemporary-drug-problems"
version = "0.1.0"
description = ""
authors = ["ashleysyg <ashley.syg.lee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
